# rosbot

rosbot_description/: CMakeLists.txt  package.xml
rosbot_description/launch/: gmapping.launch  rosbot.launch  rosbot_gmapping.launch
rosbot_description/rviz/: config.rviz
rosbot_description/urdf/: rosbot.gazebo  rosbot.xacro
rosbot_description/worlds/: maze_new.world
rosbot_description/worlds/maze_new/: model.sdf
rosbot_docking/: CMakeLists.txt  package.xml
rosbot_docking/launch/: ar_tag.launch  docking_map.launch  spawn_box.launch
rosbot_docking/models/: tag_box.urdf.xacro  tag_box2.urdf.xacro  tag_box3.urdf.xacro
rosbot_navigation/: CMakeLists.txt  package.xml
rosbot_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  exploration.yaml  global_costmap_params.yaml  local_costmap_params.yaml
rosbot_navigation/launch/: rosbot_amcl.launch
rosbot_navigation/maps/: maze.pgm  maze.yaml
rosbot_teleop/: CMakeLists.txt  package.xml
rosbot_teleop/src/: teleop.cpp
